correct alignment

--- a/less/main.less
+++ b/less/main.less
@@ -37,6 +37,11 @@
     }
 }
 
+.date-day {
+  position: relative;
+  right: -0.5em;
+}
+
 #ticket-bar {
   text-align: center;
   margin-top: 2ex;
